@@ -1,5 +1,12 @@
 2009-05-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Abbreviated KiB/s to KiBs and its precision decreased to 1 to save
+	space in console readout. Also they are now shown in MiB/s if
+	speed > 1024KiB/s.
+	* src/ConsoleStatCalc.cc
+
+2009-05-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Added SEED to console output, which represents the number of
 	seeders currently the client is connecting to.	
 	* src/ConsoleStatCalc.cc
